update-manager (1:0.93.33) intrepid; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add detection for cards no longer supported via fglrx 
      and ensure transition to "ati" (LP: #284408) 
  * DistUpgrade/DistUpgradeCache.py:
    - check if the package is actually downloadable in the 
      removal blacklist checking (LP: #293486)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 29 Oct 2008 20:56:20 +0100

update-manager (1:0.93.32) intrepid; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - when transitioning from kubuntu-kde4-desktop to kubuntu-desktop
      consider key dependencies as well even if kubuntu-kde4-desktop
      is no longer installed (LP: #277285)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Oct 2008 17:54:50 +0200

update-manager (1:0.93.31) intrepid; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - remove goubuntu-desktop from metapackages, we do no
      longer build it (LP: #283712)
  * DistUpgrade/DistUpgradeCache.py: 
    - never remove packages in the "KeepInstalled" section
    - keep the GUI alive when calculating the packages
      to cleanup
  * DistUpgrade/DistUpgradeQuirks.py:
    - mark "language-pack-$lang" as manual installed to
      workaround changes in "language-support-$lang" 
      (LP: #287551)
   * po/:
     - updated to the latest translations.launchpad.net
       version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Oct 2008 15:02:03 +0200

update-manager (1:0.93.30) intrepid; urgency=low

  * DistUpgrade/DistUpgradeViewText.py:
    - ignore "default" argument handling in askYesNoQuestion
      to fix incorrect prompt for cdrom question
  * DistUpgrade/DistUpgradeQuirks.py:
    - ensure "landscape-common" is not marked auto-install
      (LP: #288051)
  * DistUpgrade/ReleaseAnnouncement:
    - updated for final release
  * DistUpgrade/DistUpgradeAptCdrom.py:
    - ignore "dist-upgrader" dirs when scanning for 
      packages (LP: #288169)
